Fidling with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 #
 language: c
 sudo: required
+services:
+ - docker
 script:
  - make OPTIMIZ="-O3 -s"
 before_install:
  - sudo apt-get update
+ - wget --help
+ - python --version
+ - type pip
+ - pip install docker-rpm-builder
  - sudo apt-get -y install docker-rpm-builder
 compiler: gcc
