Fidling with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ services:
 script:
  - make OPTIMIZ="-O3 -s"
  - make tar BUILD_NUM=$TRAVIS_BUILD_NUMBER
- - make tlkit.spec
- - docker-rpm-builder dir . .
+ - make tlkit.spec BUILD_NUM=$TRAVIS_BUILD_NUMBER
+ - docker-rpm-builder dir alanfranz/drb-epel-7-x86-64:latest . .
 before_install:
  - sudo apt-get update
  - sudo -H pip install docker-rpm-builder
