--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
  - make tlkit.spec BUILD_NUM=$TRAVIS_BUILD_NUMBER
  - docker-rpm-builder dir alanfranz/drb-epel-7-x86-64:latest . .
  - rm -f */*-debuginfo-*.rpm
- - package_cloud push aliuly/localapps/el/7 */*.el7.*.rpm
+# - package_cloud push aliuly/localapps/el/7 */*.el7.*.rpm
  - ./relmgr
 before_install:
  - sudo apt-get update
