--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ script:
  - make OPTIMIZ="-O3 -s"
  - make tar BUILD_NUM=$TRAVIS_BUILD_NUMBER
  - make tlkit.spec BUILD_NUM=$TRAVIS_BUILD_NUMBER
-# - docker-rpm-builder dir alanfranz/drb-epel-7-x86-64:latest . .
+ - docker-rpm-builder dir alanfranz/drb-epel-7-x86-64:latest . .
  - rm -f */*-debuginfo-*.rpm
  - ./relmgr
-# - package_cloud push aliuly/localapps/el/7 */*.el7.*.rpm
+ - package_cloud push aliuly/localapps/el/7 */*.el7.*.rpm
 before_install:
-# - sudo apt-get update
+ - sudo apt-get update
  - sudo -H pip install docker-rpm-builder
-# - gem install package_cloud
+ - gem install package_cloud
 compiler: gcc
 env:
   global:
